Small changes & bugfixes